[package]
name = "rws"
version = "0.1.0"
authors = ["Bruno Georges <bruno.georges@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1.6.1", features = ["full"] }
scraper = { version= "0.12.0" }